yoshimi 1.3.x

2016-3-25 Will
- Added error check for invalid vector files.
- Bugfix: if jack not running and ALSA not available yoshimi 
  sometimes segfalted.
- Splash screen can now be disabled.

2016-3-23 Will
- Implemented CLI Vector save and load.
- Minimum CLI abbreviations capitalised.
- Reorganised CLI vector features setting.
- Giving no channel number for vector load now loads to the same
  channel as it was saved from.
- Now ensures the channel numbers are correct for all four parts.

2016-3-21 Will
- Bugfix: All file loads incorporating scales now correctly tuned.
- CLI can now load and save scales.
- Small adjustment to scales window.

2016-3-20 Will
- CLI can now load and save states.
- Whenever scales are loaded via GUI tunings are also now applied.

2016-3-19 Will
- Reorganised startup so that bank and history loading
  doesn't slow down intial stand-alone display, as this
  had made some users think it had failed, so tried again.
  LV2 startup as before.
- CLI can now list recent histories.

2016-3-18 Will
- Patched CMakeLists.txt to make it more distro agnostic.

2016-3-16 Will
- Fixed regression: LV2 gui now displays correctly again.

2016-3-13 Will
- Minor doc corrections and updates.

2016-3-10 Will
- Reorganised CMakeLists.txt files for better integration with
  different distros, and to recognise LV2_PATH.

2016-3-8 Will
- Bugfix: CMakeLists.txt now recognises both ncurses and ncursesw.
- Bugfix: Default presets were only being set if there were none in
  the .config file, but not if there was no config file!
- Max preset directories set to 128 (same as roots and banks).

2016-3-5 Will
- Console now adds entries at the start.
- matchWord now case insensitve to reference word as well as input.
- More messages can be suppressed.

2016-2-28 Will
- Updated docs.

yoshimi 1.3.9

2016-2-28 Will
- Effect preset number is now included in prompt.
- Removed duplicate instrument "0085-old_pad.xiz from Mysterious bank.