@@ -139,6 +139,7 @@ class Config : public MiscFuncs
         int           midi_bank_C;
         int           midi_upper_voice_C;
         int           enable_part_on_voice_load;
+        bool          ignoreResetCCs;
         bool          monitorCCin;
         int           single_row_panel;
         int           NumAvailableParts;
