@@ -1,5 +1,8 @@
 yoshimi 1.3.x
 
+2016-3-26 Will
+- Added "Ignore reset all controllers" to MIDI config.
+
 2016-3-25 Will
 - Added error check for invalid vector files.
 - Bugfix: if jack not running and ALSA not available yoshimi 
